# StepEngine

./: .gitignore  CMakeLists.txt  Composite.hlsl  DX12Main.cpp  EngineBoxApp.cpp  EngineBoxApp.h  EngineCameraDirectX.cpp  EngineCameraDirectX.h  EngineCoreDirectX.cpp  EngineCoreDirectX.h  EngineDelegate.h  EngineGlobalDirectX.h  EngineLog.cpp  EngineLog.h  EngineMain.cpp  EngineMainDirectX.cpp  EngineManagerDirectX.cpp  EngineManagerDirectX.h  EngineMaterialDirectX.h  EngineObjectDirectX.cpp  EngineObjectDirectX.h  EngineSceneManagerDirectX.cpp  EngineSceneManagerDirectX.h  EngineShaderDirectX.cpp  EngineShaderDirectX.h  EngineTextureDirectX.h  EngineTimer.cpp  EngineTimer.h  EngineUtil.h  EngineUtilDirectX.cpp  EngineUtilDirectX.h  EngineWindow.cpp  EngineWindow.h  EngineWindowDirectX.cpp  EngineWindowDirectX.h  LICENSE  Lighting.hlsl  README.md  Test.bat  billboard.hlsl  (+2 more)
Source/: CMakeLists.txt
Source/Runtime/Core/: ClassDefine.h  PlatformDefine.h
Source/Runtime/Math/: MathCommon.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h
Source/Runtime/Script/: ScriptParser.h
Source/Runtime/Thread/: PlatformCriticalSection.h  PlatformMutex.h  PlatformProcessor.h  PlatformReaderWriterLock.h  PlatformSemaphore.h  PlatformThread.h  ReentrantLock.cpp  ReentrantLock.h  SpinCounter.cpp  SpinCounter.h  SpinLock.cpp  SpinLock.h  TScopedLock.h
Source/Runtime/Thread/Windows/: WindowsCriticalSection.cpp  WindowsCriticalSection.h  WindowsMutex.cpp  WindowsMutex.h  WindowsProcessor.cpp  WindowsProcessor.h  WindowsReaderWriterLock.cpp  (+5 more)
(+31 files in other folders)
