CMAKE_MINIMUM_REQUIRED(VERSION 3.23)
SET(CMAKE_CXX_STANDARD 17)
SET(STEP_PROJECT_NAME "StepEngine")
PROJECT(${STEP_PROJECT_NAME})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB_RECURSE STEP_SOURCE_FILES
    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
)
SOURCE_GROUP(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX ${STEP_PROJECT_NAME} FILES ${STEP_SOURCE_FILES})

ADD_EXECUTABLE(
   ${STEP_PROJECT_NAME}
   WIN32
   ${STEP_SOURCE_FILES}
)
